<resources>
    <string name="app_name">conciergerie</string>
    <string name="welcome_text">CONTENTS DE VOUS VOIR ICI</string>
    <string name="start">COMMENCER</string>
    <string name="exclusif">Service exclusif de Conciergerie</string>
    <string name="inscription">s\'inscrire ici</string>
    <string name="commencer">Commencer</string>
    <string name="connexion">Connexion</string>
    <string name="email">email</string>
    <string name="passowrd">password</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="connecte_toi">CONNECTE TOI !</string>
    <string name="internet">Votre connexion internet n\'est pas activée</string>
    <string name="formulaire">Veuillez remplir tous les champs du formulaire.</string>
    <string name="patienter">Patientez...</string>
    <string name="confirmPassword">Confirmer le mot de passe</string>
    <string name="nom">nom</string>
    <string name="mobileNumber">Numéro de telephone</string>
    <string name="prenom">Prénom</string>
    <string name="enregistrer">enregister</string>
    <string name="already_user">Vous avez déjà un compte?</string>
    <string name="data">Chargement des données</string>
    <string name="back">retour</string>
    <string name="envoyer">envoyer</string>
    <string name="sentence_email">S\'il vous plaît entrez votre  email ci-dessous</string>
    <string name="bad">mauvais email</string>
    <string name="submit">valider</string>
    <string name="text_code">S\'il vous plaît entrer le code de réinisialisation</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="update_password">Réinitialiser votre mot de passe</string>
    <string name="title_activity_principale">Principale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">narcissedowa@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nos_services">Nos services</string>
    <string name="mes_commandes">Mes commandes</string>
    <string name="autres">Autres</string>
    <string name="mon_compte">Mon compte</string>
    <string name="aide">Aide</string>
    <string name="param_tre">Paramètre</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="mod_passe">Modifier votre mot de passe</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="annuler">Annuler</string>
    <string name="modifier">Modifier</string>
    <string name="live">Où habitez-vous ?</string>
    <string name="date_available">Date de disponibilité</string>
    <string name="date_select">Sélectionner la date</string>
    <string name="heure_select">Sélectionner l\'heure</string>
    <string name="date">Date</string>
    <string name="heure">Heure</string>
    <string name="votre_budget">Votre Budget</string>
    <string name="description">Description</string>
    <string name="description_complete">Entrer une description</string>
    <string name="title_activity_commandes">Commandes</string>
    <string name="date_prestation">Date de prestation</string>
    <string name="prix">Prix</string>
    <string name="etat">État</string>
    <string name="en_cours">En cours</string>
    <string name="cancel">annuler la commande</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="old_password">Entrez votre mot de passe actuel</string>
    <string name="check_internet">verifier votre connexion internet et réessayer</string>
    <string name="incorrect">Email ou mot de passe invalide. Veuillez réessayer</string>
    <string name="connect">connecté</string>
    <string name="disconnect">vous n\' est pas connecté à internet</string>
    <string name="disconnected">vous n\' est pas connecté à internet</string>
    <string name="logout_long">Voulez-vous vraiment vous déconnecter ?</string>
    <string name="logout">Deconnexion</string>
    <string name="current_pass">mot de passe actuel non valide</string>
    <string name="modify">voulez vous vraiment modifier ?</string>
    <string name="update_infos">Votre compte a été mise à jour</string>
    <string name="inscription_register">Inscription enregistrée avec succès</string>
    <string name="inscription_already">Ce utilisateur existe déjà</string>
    <string name="number_must">votre numéro doit contenir huit(08) caractères</string>
    <string name="commande_registred">votre commande a été enregistrée</string>
    <string name="yes">oui</string>
    <string name="no">non</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="leave_app">voulez vous vraiment quitter cette application ?</string>
    <string name="leave">je quitte</string>
    <string name="stay">Je reste</string>
    <string name="commande_cancel">voulez vous anunuler cette commande?</string>
    <string name="not_commande">vous n\'avez pas de commande pour le moment</string>
    <string name="ajouter_ici">Ajouter ici</string>
    <string name="wait">Patientez...</string>
    <string name="cancel_commade">Votre commande a été annulée</string>
    <string name="c_annulee">annulée</string>
    <string name="c_terminee">terminée</string>
    <string name="connex_retry">verifier votre connexion internet et réessayer</string>
    <string name="not_load_data">Impossible de charger les données</string>
    <string name="validate_email">L\'email n\'est pas valide</string>
    <string name="email_send_mail">votre mot de passe vous a été envoyé par mail</string>
    <string name="incorrect_date">la date saisie est incorrecte</string>
    <string name="email_pass_incorrect">Email ou mot de passe invalide. Veuillez réessayer</string>
    <string name="email_long_valid">Veuillez remplir tous les champs du formulaire ou vérifiez si votre email est valide</string>
    <string name="active_gps">activer le gps ou vérifiez votre connexion internet</string>
    <string name="impossible_commande">Impossible d\'enregistrer votre commande.</string>
    <string name="choice_date">Choisir la date</string>
    <string name="choice_hour">Choisir l\'heure</string>
</resources>
