<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mod_passe"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/confirm_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_annuler"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:theme="@style/MyButton"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:text="@string/annuler"/>

            <Button
                android:id="@+id/btn_modifier_bow"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:theme="@style/MyButtonRed"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/color_white"
                android:text="@string/modifier"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>