<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Inscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimaryDark"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_activity_inscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="top|end"
                    android:layout_margin="4dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_close_1" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_inscription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/inscription"
                android:textColor="@color/color_white"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_nom_ins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/nom"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


        <EditText
            android:id="@+id/et_prenom_ins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/prenom"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/et_email_ins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/et_tel_ins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />


        <EditText
            android:id="@+id/et_password_ins"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />



        <Button
            android:id="@+id/btn_inscription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:theme="@style/MyButton"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/enregistrer"/>

        <TextView
            android:id="@+id/already_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>