<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Validate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/close_activity_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="top|end"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_close_1" />

    </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/text_title_services"
                android:layout_width="match_parent"
                android:text="Baby Shower"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/color_or"
                android:layout_height="wrap_content" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/location"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="Saisissez manuellement votre localité"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/btn_get_city"
            android:layout_width="match_parent"
            android:text="cliquer ici pour obtenir votre localité"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_red"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:text="@string/date_available"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/et_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/date"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/date"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/choice_date"
            android:hint="@string/date_select" />
    </LinearLayout>



</LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/et_heure"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/heure"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/heure"

                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_grey"
                    android:textSize="16sp" />



                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn_heure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:text="@string/choice_hour"
                            android:hint="@string/heure_select" />

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

</LinearLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:text="09761698"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="0"
        android:layout_margin="2dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_budget"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/money"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/votre_budget"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/color_red"
            android:textColorHint="@color/color_red"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />
    </LinearLayout>
</LinearLayout>

    </LinearLayout>


        <EditText
            android:id="@+id/et_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:hint="@string/description_complete"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:lines="5"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:gravity="top|left"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_grey"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <Button
            android:id="@+id/btn_validate_commande"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:theme="@style/MyButton"
            android:textStyle="bold"
            android:text="@string/submit"/>


        <TextView
            android:id="@+id/txt_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:textColor="@color/color_white"
            android:textStyle="bold"
          />

    </LinearLayout>



    </ScrollView>

</android.support.constraint.ConstraintLayout>