<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".password">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/close_activity_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="top|end"
                android:layout_margin="4dp"
                android:padding="5dp"
                android:src="@drawable/ic_close_1" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sentence_email"
            android:textColor="@color/color_white"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/registered_emailid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="5dp"
                android:text="@string/back"
                android:textColor="@color/color_white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/envoyer"
                android:textColor="@color/color_or"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>




</LinearLayout>